[gd_scene load_steps=9 format=3 uid="uid://d266kht3k15h3"]

[ext_resource type="Script" path="res://Lib/Note/Note.gd" id="1_2y3am"]
[ext_resource type="Script" path="res://Lib/Note/NoteSymbol.gd" id="2_m20ro"]
[ext_resource type="Texture2D" uid="uid://b6632lc5gjhwh" path="res://Assets/Notes/note_a.png" id="2_u6ctc"]
[ext_resource type="Script" path="res://Lib/Note/NoteInit.gd" id="4_s6n1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sxx7"]
size = Vector2(21.7344, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_58sws"]
size = Vector2(20, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okhr5"]
size = Vector2(43, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj62h"]
size = Vector2(5, 130)

[node name="Note" type="Node2D"]
script = ExtResource("1_2y3am")

[node name="NoteSymbol" type="TextureRect" parent="."]
offset_right = 131.0
offset_bottom = 130.0
texture = ExtResource("2_u6ctc")
expand_mode = 1
script = ExtResource("2_m20ro")

[node name="GoodArea" type="Area2D" parent="."]

[node name="GoodBox" type="CollisionShape2D" parent="GoodArea"]
position = Vector2(11.8672, 65)
shape = SubResource("RectangleShape2D_4sxx7")

[node name="GoodBox2" type="CollisionShape2D" parent="GoodArea"]
position = Vector2(119.734, 65)
shape = SubResource("RectangleShape2D_4sxx7")

[node name="GreatArea" type="Area2D" parent="."]

[node name="GreatBox" type="CollisionShape2D" parent="GreatArea"]
position = Vector2(33, 65)
shape = SubResource("RectangleShape2D_58sws")
debug_color = Color(0.984314, 0, 0.352941, 0.419608)

[node name="GreatBox2" type="CollisionShape2D" parent="GreatArea"]
position = Vector2(98, 65)
shape = SubResource("RectangleShape2D_58sws")
debug_color = Color(0.984314, 0, 0.352941, 0.419608)

[node name="PerfectArea" type="Area2D" parent="."]

[node name="PerfectBox" type="CollisionShape2D" parent="PerfectArea"]
position = Vector2(65.5, 65)
shape = SubResource("RectangleShape2D_okhr5")
debug_color = Color(0.670588, 0.509804, 0, 0.419608)

[node name="NoteInitArea" type="Area2D" parent="."]
script = ExtResource("4_s6n1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteInitArea"]
position = Vector2(1, 65)
shape = SubResource("RectangleShape2D_uj62h")
debug_color = Color(0.643137, 0.337255, 1, 0.419608)

[connection signal="area_entered" from="GoodArea" to="." method="_on_good_area_area_entered"]
[connection signal="area_entered" from="GreatArea" to="." method="_on_great_area_area_entered"]
[connection signal="area_entered" from="PerfectArea" to="." method="_on_perfect_area_area_entered"]
